# erisml-lib

./: .gitignore  AI_SAFETY_STACK.md  COMMUNITY_ANNOUNCEMENT.md  Consciousness_as_Ethical_Measurement.docx  DEME_3.0_Tensorial_Ethics_Vision.md  ErisML - Comparison with Related Normative Frameworks.md  ErisML_DEME_Development_Tasks_SPRINT_1.md  ErisML_Vision.md  GUASS_SAI_HARDENED.md  MANIFEST.in  QND_BELL_TEST_README.md  QND_BELL_TEST_README2.md  QND_BLINDING_PROTOCOL.md  README (2).md  README.md  UPLOAD_TO_TEST_PYPI.md  add_katex.py  analyze_qnd_results_crash.py  bip_audit_artifact.json  build_books.py  em_dag.json  fix_all_em_balance.py  fix_all_math.py  fix_double_escape.py  fix_html_rendering.py  fix_math.py  fix_math2.py  fix_math3.py  fix_math4.py  fix_math_rebuild.py  fix_unclosed_em.py  linkedin_sqnd_article.docx  linkedin_sqnd_article.md  p2b.py  pyproject.toml  qnd_batch_bell_v06.py  qnd_bell_test_experiment.py  qnd_blind_bell_test_v04.py  qnd_multilang_bell_v05.py  tensorial_ethics_chapter_2.md  (+2 more)
.claude/: settings.local.json
.github/workflows/: pages.yml
deme_profiles/: balanced_case_by_case.json  hospital_service_robot_v1.json  jain-1.json
docs/: index.html
docs/EFM/: EFM_TIM_VC_Pitch_Deck_v2_FINAL.pptx
docs/book/: appendix-a-related-work-and-differentiation.html  appendix-b-reproduction-cookbook.html  appendix-c-human-subjects-research-roadmap.html  appendix-d-end-to-end-case-studies.html  appendix-e-skeptic-s-appendix-objections-alternatives-and-fa.html  appendix-f-mathematical-ledger-status-of-formal-claims.html  bibliography.html  book.css  chapter-1-introduction-why-geometry.html  chapter-10-moral-dynamics-parallel-transport-holonomy-and-th.html  chapter-11-moral-reasoning-as-optimal-search.html  chapter-12-noether-s-theorem-for-ethics-symmetry-invariance-.html  chapter-13-quantum-normative-dynamics-superposition-measurem.html  chapter-14-collective-moral-agency-aggregation-emergence-and.html  chapter-15-from-tensor-to-decision-the-philosophy-of-moral-c.html  chapter-16-moral-uncertainty-and-the-limits-of-geometric-det.html  chapter-17-empirical-evidence-for-geometric-ethics.html  chapter-18-geometric-ethics-for-artificial-agents.html  chapter-19-the-deme-architecture-and-erisml.html  chapter-2-the-failure-of-scalar-ethics.html  chapter-20-geometric-economics-the-bond-geodesic-equilibrium.html  chapter-21-geometric-clinical-ethics-triage-consent-and-the-.html  chapter-22-geometric-jurisprudence-algorithmic-justice-and-l.html  chapter-23-geometric-finance-market-microstructure-on-the-de.html  chapter-24-geometric-theology-religious-reasoning-on-the-mor.html  chapter-25-geometric-environmental-ethics-climate-commons-an.html  chapter-26-geometric-ai-ethics-the-moral-geometry-of-algorit.html  chapter-27-geometric-bioethics-population-level-ethics-on-th.html  chapter-28-geometric-military-ethics-war-and-constrained-pat.html  chapter-29-open-problems.html  chapter-3-historical-precursors-geometry-before-geometry.html  chapter-30-conclusion-the-geometry-of-maybe.html  chapter-4-mathematical-preliminaries.html  chapter-5-the-moral-manifold.html  chapter-6-the-tensor-hierarchy.html  chapter-7-one-case-five-levels.html  chapter-8-stratification-boundaries-thresholds-and-phase-tra.html  chapter-9-the-origin-of-the-moral-metric-discovery-construct.html  core-objects-at-a-glance.html  index.html  (+9 more)
docs/development/: V3_Sprint_Plan.docx  V3_Sprint_Plan.md
docs/geometric-ai/: chapter-1-the-scalar-alignment-trap.html  chapter-10-the-five-cognitive-signatures-what-the-measuring-agi-benchmarks-revealed.html  chapter-11-adversarial-probing-as-manifold-exploration.html  chapter-12-the-sycophancy-manifold.html  chapter-13-gauge-invariant-reward-models.html  chapter-14-constitutional-geometry.html  chapter-15-scalable-oversight-as-gauge-verification.html  chapter-16-geometric-rlhf.html  chapter-17-superalignment-as-parallel-transport.html  chapter-18-multi-agent-alignment-as-equilibrium.html  chapter-19-what-ai-teaches-the-general-theory.html  chapter-2-a-brief-history-of-alignment-and-its-geometric-mistake.html  chapter-20-open-questions.html  chapter-3-the-case-for-geometric-alignment.html  (+6 more)
examples/: train_v3_agent.py
notebooks/: geometric_bioacoustics.ipynb
schemas/: deme_profile_v03.json  ethical_facts.json  ethical_judgement.json
scripts/: bond_index_calibration_test_suite.py
templates/: chapter.html
tests/: conftest.py  test_acceleration.py  test_appendix_d_case_studies.py  test_bond_index_calibration.py  test_coalition_tensor.py  test_core_engine_new.py  test_ethics_domain_interfaces.py  test_ethics_governance.py  test_ethics_module_v3.py  test_ethics_serialization.py  test_facts_v3.py  test_fairness_metrics.py  test_greek_tragedy_pantheon_demo.py  test_hohfeld_d4.py  test_moral_tensor.py  test_moral_vector.py  test_pettingzoo_adapter.py  test_pettingzoo_v3.py  test_rank6_tensor.py  test_shapley.py  test_smart_home.py  test_strategic_layer.py  test_temporal_tensor.py  test_tensor_ops.py  test_triage_em.py  test_triage_em_v3.py  test_uncertainty.py  test_v2_v3_compat.py
(+406 files in other folders)
