[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erisml"
version = "0.1.0"
description = "ErisML: A library for governed, foundation-model-enabled agents with tensorial ethics."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Andrew H. Bond", email = "andrew.bond@sjsu.edu"},
  {name = "Apramey Malur Kashyap", email = "apramey.malurkashyap@sjsu.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "lark>=1.1.7",
  "pydantic>=2.0.0",
  "pettingzoo>=1.24.0",
  "gymnasium>=0.28.0",
  "tarski>=0.7.1",
  "prometheus-client>=0.16.0",
  "structlog>=24.0.0",
  "mcp>=0.9.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "mypy>=1.0.0",
  "black>=24.0.0",
  "isort>=5.0.0",
  "ruff>=0.4.8",
  "taplo>=0.9.0",
  "pytest-cov",
  "twine>=4.0",
  "build>=1.0",
]
gpu = [
    "cupy-cuda12x>=12.0.0"
]

[tool.pytest.ini_options]
addopts = "--cov=src/erisml --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[project.urls]
"Homepage" = "https://github.com/ahb-sjsu/erisml-lib"
"Bug Tracker" = "https://github.com/ahb-sjsu/erisml-lib/issues"
"Documentation" = "https://ahb-sjsu.github.io/erisml-lib/"

[project.scripts]
erisml-mcp-server = "erisml.ethics.interop.mcp_deme_server:main"